Fix the little squares overflow
Now the sqaures are getting generated to fill the full size of the board
correctly.

--- a/index.css
+++ b/index.css
@@ -16,12 +16,12 @@ body {
 .board {
   display: flex;
   flex-wrap: wrap;
-  width: 50vw;
+  width: 400px;
   background-color: White;
-  height: 50vh;
+  height: 400px;
 }
 
 .square {
-  border: 1px solid;
+  /* border: 1px solid; */
   /* background-color: Red; */
 }
